NEWS - OpenPrinting CUPS Filters v1.17.0 - 2017-08-22
-----------------------------------------------------

CHANGES IN V1.17.1

	- libcupsfilters: Completely redone the way how to determine
	  the resolutions to use for the default resolution and print
	  quality option in the PPDs generated for IPP
	  printers. Resolution lists from IPP attributes are now read
	  into sorted, duplicate-free lists with wrong resolutions
	  removed or fixed. Resolutions actually used are the common
	  ones between the supported PDLs, PDls with inferior maximum
	  resolution or with broken resolution list are skipped
	  (Debian bug #868360, Ubuntu bug #1712019, CUPS issue #5088,
	  CUPS Issue #5091).
	- rastertopdf: Prefer RLE compression instead of Flate as
	  there are HP printers where Flate is buggy.
	- Build system: Fixed help mesage for "--enable-driverless"
	  configure option (Bug #1405).

CHANGES IN V1.17.0

	- rastertopdf, rastertopclm, driverless, cups-browsed,
	  libcupsfilters: Added support for the PCLm output format for
	  driverless printing on Mopria and Wi-Fi Direct
	  printers. This is the Google Summer of Code 2017 project of
	  Sahil Arora (sahilarora dot 535 at gmail dot com). Thank you
	  very much for your great work!  The PCLm support requires
	  QPDF 7.0.0 or later.

CHANGES IN V1.16.4

	- Build system: Switched over to C11 standard with GNU
          extensions (-std=gnu11).
	- Build system: Removed -pedantic flag as it is only needed
          for compatibility with commercial compilers like the ones of
          Windows (and we use GNU extensions anyway).
	- libfontembed, texttopdf: reverted removal of anonymous
          union.

CHANGES IN V1.16.3

	- libfontembed: Reverted unneeded soname change.

CHANGES IN V1.16.2

	- README: Minimum CUPS requirement of cups-filters is CUPS
	  1.4.x.  It does not build with earlier CUPS versions (Bug
	  #993).
	- driverless, foomatic-rip: Create relative symbolic links.